<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scheme</string>
    <string name="start_view">Start View</string>
    <string name="backdrop">Backdrop</string>
    <string name="to_gallery">To Gallery</string>
    <string name="to_camera">To Camera</string>
    <string name="to_picker">To Picker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pinpoint">PinpointActivity</string>
    <string name="pinpoint_view">Pinpoint View</string>
    <string name="title_activity_color_picker">ColorPickerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="current_hexcode">current hex code</string>
    <string name="current_info">current info</string>
    <string name="title_activity_color_picker_activity">ColorPickerActivity</string>
    <string name="action_search">Search</string>
    <string name="action_by_hue">By Hue</string>
    <string name="action_by_saturation">By Saturation</string>
    <string name="action_by_value">By Value</string>
    <string name="toggle_panel">Show Schemes</string>
    <string name="mono">Mono</string>
    <string name="analog">Analog</string>
    <string name="triad">Triad</string>
    <string name="split_comp">Split Comp</string>
    <string name="comp">Comp</string>
    <string name="adjust">Go</string>
    <string name="adjust_hsv">Adjust HSV</string>
    <string name="cancel">Cancel</string>
    <string name="hue">Hue</string>
    <string name="val">Saturation</string>
    <string name="sat">Value</string>
    <string name="action_adjust">Adjust&#8230;</string>
    <string name="cont">Continue</string>
    <string name="add_to_palettes">Add to Palettes</string>
    <string name="add">Add</string>
    <string name="new_palette">New Palette</string>
    <string name="palette_file_key">PALETTE_FILE_KEY</string>
    <string name="palette_name">palette name</string>
    <string name="create">Create</string>
    <string name="action_add_to_palette">Add to Palette</string>
    <string name="action_create_palette">New Palette</string>
    <string name="title_activity_my_palettes">MyPalettesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="action_delete_palette">Delete Palette</string>
    <string name="action_edit_palette">Edit Palette</string>
    <string name="action_rename_palette">Rename Palette</string>
    <string name="confirm_delete">Delete Palette </string>
    <string name="ok">OK</string>

</resources>
