<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.scheme.ColorPickerActivity2" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_by_hue"
        android:orderInCategory="100"
        android:title="@string/action_by_hue"
        app:showAsAction="always" />
    
     <item
        android:id="@+id/action_by_saturation"
        android:orderInCategory="100"
        android:title="@string/action_by_saturation"
        app:showAsAction="always" />
     
      <item
        android:id="@+id/action_by_value"
        android:orderInCategory="100"
        android:title="@string/action_by_value"
        app:showAsAction="always" />
      
      <item
        android:id="@+id/toggle_panel"
        android:orderInCategory="100"
        android:title="@string/toggle_panel"
        app:showAsAction="always" />
      <item
        android:id="@+id/action_adjust"
        android:orderInCategory="100"
        android:title="@string/action_adjust"
        app:showAsAction="always" />

</menu>
