<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.scheme.MyPalettesActivity" >

    <item
        android:id="@+id/action_create_palette"
        android:orderInCategory="100"
        android:title="@string/action_create_palette"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_rename_palette"
        android:title="@string/action_rename_palette"
        app:showAsAction="withText|ifRoom"/>
    
    <item android:id="@+id/action_edit_palette"
         android:orderInCategory="100"
          android:title="@string/action_edit_palette"
          android:showAsAction="ifRoom|withText" />
    
    <item
        android:id="@+id/action_delete_palette"
        android:orderInCategory="100"
        android:title="@string/action_delete_palette"
        app:showAsAction="never"/>

</menu>
