<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.scheme.MainActivity"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/ic_launcher" />
    
    <ImageView
            android:id="@+id/to_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal|bottom"
            android:contentDescription="@string/to_gallery"
            android:src="@drawable/ic_launcher" />
    
        <ImageView
            android:id="@+id/to_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:padding="20dp"
            android:layout_marginLeft="20dp"
            android:paddingRight="15dp"
            android:layout_gravity="left|bottom"
            android:contentDescription="@string/to_camera"
            android:src="@drawable/ic_launcher" />
        
        <ImageView
            android:id="@+id/to_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:padding="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="15dp"
            android:layout_gravity="right|bottom"
            android:contentDescription="@string/to_picker"
            android:src="@drawable/ic_launcher" />

</FrameLayout>