<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">
    
    <TextView
        android:id="@+id/seek_hue_text" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hue"/>
    
    <SeekBar
        android:id="@+id/seek_hue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
     <TextView 
        android:id="@+id/seek_sat_text" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sat"/>
     
    <SeekBar
        android:id="@+id/seek_sat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
     <TextView
        android:id="@+id/seek_val_text"  
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val"/>

    <SeekBar
        android:id="@+id/seek_val"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
